@@ -44,7 +44,7 @@ The Reel As option allows saving the Reel as a simple EDL.
 The Frame as allows you to save a single image.
 <br>
 <br>
-The GL Snapshot As allows you to save a single snapshot of your opengl view.  This saves the annotations, for example, but it may not respect the image's original size.
+The GL Snapshot As allows you to save an opengl snapshot of your opengl view.  This saves the annotations, for example, but it may not respect the image's original size, but the size of the viewport.
 <br>
 <br>
 And it allows to save the ACES CTL transforms applied for LUT management as an ACES Clip XML Metadata file..
